@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Removed the now redundant command `oq extract hazard/rlzs`
+
   [Daniele Viganò]
   * Fixed 'oq abort' and always mark killed jobs as 'aborted'
 
